# advent_of_code

./: CMakeLists.txt  run.bat
cmake/: AocGenDays.cmake
lib/: CMakeLists.txt
lib/include/: aoc_file.h  aoc_memory.h  aoc_parser.h  aoc_str.h
lib/src/: aoc_file.c  aoc_str.c
src/2023/: CMakeLists.txt
src/2023/01/: aoc_2023_01.c
src/2023/02/: aoc_2023_02.c
src/2023/03/: aoc_2023_03.c
src/2023/04/: aoc_2023_04.c
